src/objects/CustomEvent__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_time__c</fullName>
        <label>Date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CustomEvent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CustomEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>